assets/css/default.css
body {
    background: rgb(30, 30, 30);
}

.feather {
    width: 16px;
    height: 16px;
    vertical-align: text-bottom;
}

/*
* Sidebar
*/

.sidebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    z-index: 100; /* Behind the navbar */
    padding: 48px 0 0; /* Height of navbar */
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
}

@media(max-width: 767.98px) {
    .sidebar {
        top: 5rem;
    }
}

.sidebar-sticky {
    position: relative;
    top: 0;
    height: calc(100vh - 48px);
    padding-top: 0.5rem;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

.sidebar .nav-link {
    font-weight: 500;
    color: #f0f0f0;
}

.sidebar .nav-sub-link {
    font-weight: 400;
    color: #a0a0a0;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 0.5em;
}

.sidebar .nav-sub-link:hover {
    color: #f0f0f0;
}

.sidebar .nav-link .feather {
    margin-right: 4px;
    color: #727272;
}

.sidebar .nav-link.active {
    color: #007bff;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
    color: inherit;
}

.sidebar-heading {
    font-size: 0.75rem;
    text-transform: uppercase;
}

/*
* Navbar
*/

.navbar-brand {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
    font-size: 1rem;
    background-color: rgba(0, 0, 0, 0.25);
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
}

.navbar .navbar-toggler {
    top: 0.25rem;
    right: 1rem;
}

.navbar .form-control {
    padding: 0.75rem 1rem;
    border-width: 0;
    border-radius: 0;
}

.nav-items-container {
    height: 100%;
    overflow-y: auto;
}

.form-control-dark {
    color: #fff;
    background-color: rgba(255, 255, 255, 0.1);
    border-color: rgba(255, 255, 255, 0.1);
}

.form-control-dark:focus {
    border-color: transparent;
    box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
}

.submenu {
    padding: 0 0 0 1.1em;
    font-size: 0.95rem;
}

.submenu > ol {
    padding-left: 1em;
    color: #a0a0a0;
}

.page-title {
    width: 100%;
    color: #f0f0f0;
    text-align: center;
}

.nav-footer {
    padding: 1em;
    font-size:0.8rem;
    position: absolute;
    bottom: 0px;
    color: #808080;
}

.nav-footer > a:link {
    color: #707070;
}

.nav-footer > a:visited {
    color: #707070;
}

.nav-footer > a:hover {
    color: #909090;
}

.nav-footer > a:active {
    color: #909090;
}

.content-container {
    color: #f5f5f5;
    padding: 20px 40px;
}

.content-container > h1 {
    margin-bottom: 20px;
}

.content-container > h2 {
    margin-top: 30px;
}

.content-container > h3 {
    margin-top: 25px;
}

.content-container > p > img {
    max-width: 50%;
    margin: 10px;
    border: 1px solid #a0a0a0;
    cursor: pointer;
}

a:link {
    color: rgb(53, 255, 255);
}

a:visited {
    color: rgb(53, 255, 255);
}

a:hover {
    color: rgb(121, 255, 255);
}

a:active {
    color: #a0a0a0;
}

table {
    margin: 20px 0px;
}

th, td {
    padding: 10px 20px;
    border: 1px solid #505050;
}

pre.highlight {
    padding: 10px;
    border: 1px solid #505050;
}

.overlay {
    background: rgb(0,0,0,0.75);
    width: 100%;
    height: 100%;
    z-index: 1030;
    position: fixed;
    top: 0;
    left: 0;
    text-align: center;
    display: none;
    padding: 0px;
}

.overlay > img {
    max-height: 90%;
    max-width: 90%;
    width: auto;
    height: auto;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    border: 1px solid #a0a0a0;
}

